# geo-knowledge-hub

./: .dockerignore  .editorconfig  .gitignore  .invenio  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  DEVELOPING.rst  Dockerfile  INSTALL.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  babel.ini  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg  isso.cfg  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
site/: .editorconfig  MANIFEST.in  requirements-devel.txt  run-tests.sh  setup.cfg
site/.tx/: config
site/geo_knowledge_hub/: __init__.py  config.py  permissions.py  startup.py
site/geo_knowledge_hub/modules/: __init__.py  analytics.py  context.py  menu.py  share.py
site/geo_knowledge_hub/modules/base/: config.py  decorators.py  registry.py
site/geo_knowledge_hub/modules/base/templates/semantic-ui/geo_knowledge_hub/base/: footer.html  header.html  header_frontpage_base.html  header_login.html  page.html
site/geo_knowledge_hub/modules/base/templates/semantic-ui/geo_knowledge_hub/details/: detail.html
site/geo_knowledge_hub/modules/base/templates/semantic-ui/geo_knowledge_hub/details/details/: description.html  (+5 more)
site/geo_knowledge_hub/modules/base/templates/semantic-ui/invenio_app_rdm/macros/: records_list.html
site/geo_knowledge_hub/modules/base/templates/semantic-ui/invenio_app_rdm/users/: header.html
site/geo_knowledge_hub/modules/base/templates/semantic-ui/invenio_communities/macros/: communities_carousel.html
site/geo_knowledge_hub/modules/base/utilities/: __init__.py  awards.py  endpoint.py  files.py  harvest.py  metadata.py  records.py  related_records.py  relationship.py  serialization.py  vocabulary.py
site/geo_knowledge_hub/modules/communities_ui/: __init__.py  views.py
site/geo_knowledge_hub/modules/communities_ui/templates/semantic-ui/invenio_communities/: frontpage.html
site/geo_knowledge_hub/modules/communities_ui/templates/semantic-ui/invenio_communities/details/: header.html
site/geo_knowledge_hub/modules/communities_ui/toolbox/: __init__.py  search.py
site/geo_knowledge_hub/modules/front_ui/: __init__.py  views.py
site/geo_knowledge_hub/modules/front_ui/templates/semantic-ui/geo_knowledge_hub/frontpage/: frontpage.html
site/geo_knowledge_hub/modules/marketplace_ui/: __init__.py  views.py
site/geo_knowledge_hub/modules/packages_ui/: __init__.py  searchapp.py  views.py
site/geo_knowledge_hub/modules/packages_ui/templates/semantic-ui/invenio_requests/request-submission/: index.html
site/geo_knowledge_hub/modules/packages_ui/toolbox/: __init__.py
site/geo_knowledge_hub/modules/previews_ui/: iiif.py  video.py
site/geo_knowledge_hub/modules/previews_ui/templates/semantic-ui/invenio_previewer/: mirador3.html  simple_video.html
site/geo_knowledge_hub/modules/records_ui/: searchapp.py  views.py
site/geo_knowledge_hub/modules/records_ui/templates/semantic-ui/geo_knowledge_hub/records/: search.html
site/geo_knowledge_hub/modules/requests_ui/: views.py
site/geo_knowledge_hub/modules/requests_ui/templates/semantic-ui/invenio_requests/community-submission/: index.html
site/geo_knowledge_hub/modules/requests_ui/templates/semantic-ui/invenio_requests/macros/: request_header.html
site/geo_knowledge_hub/modules/requests_ui/toolbox/: endpoint.py  metadata.py  requests.py  types.py
site/geo_knowledge_hub/modules/users_ui/: searchapp.py
site/geo_knowledge_hub/theme/: __init__.py  webpack.py
site/geo_knowledge_hub/theme/assets/semantic-ui/js/: utils.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/components/: search.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_community/: components.js  details-search.js  frontpage.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_community/communities_carousel/: CommunitiesCarousel.js  index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_community/communities_search/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_dashboard/: uploads.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_deposit/marketplace/: GEOMarketplaceApp.js  components.js  index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_deposit/resources/: PackagesApiClient.js  RecordApiClient.js  api.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/engagements_carousel_sidebar/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/external_files/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/funding_awards/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/geospatial_previewer/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/more_like_this_cards/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/pricing_table/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/record_management/: RecordManagement.js  index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/related_links/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/related_packages/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/related_resources/: cache.js  index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_detail/user_stories/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_front/: index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/js/geo_knowledge_hub_search/: components.js  index.js
site/geo_knowledge_hub/theme/assets/semantic-ui/less/: base.less  preview.less
site/geo_knowledge_hub/theme/config/: .eslintrc.js  package.json
site/geo_knowledge_hub/theme/config/patches/: watchpack+1.7.4.patch
site/tests/: conftest.py
(+654 files in other folders)
