# -*- coding: utf-8 -*-
#
# This file is part of GEO Knowledge Hub.
# Copyright 2020-2021 GEO Secretariat.
#
# GEO Knowledge Hub is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.
#

[metadata]
name = geo-knowledge-hub
version = attr: geo_knowledge_hub.__version__
description = GEO Knowledge Hub Digital Library
long_description = file: README.rst, CHANGES.rst
keywords = Geospatial Digital Library Earth Observations Invenio RDM
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-knowledge-hub
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    jsonref<=0.3.0
    jsonresolver<=0.3.1
    flask-resources<=0.8.4
    pydash>=5.1.0
    invenio-app-rdm>=9.0.0,<10.0.0
    geo-comments @ git+https://github.com/geo-knowledge-hub/geo-comments@b-0.2

[options.extras_require]
docs =
    sphinx>=4.2.0,<5
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-mock>=1.6.0
    pytest-invenio>=1.4.7
    pytest-runner>=3.0.0,<5
    invenio-app>=1.3.4
    sphinx>=4.2.0,<5
    tripoli~=2.0.0
    pydocstyle>=6.1.1,<6.2.0
    invenio-db[postgresql,versioning]>=1.0.14,<2.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=1.4.2,<2.0

[options.entry_points]
invenio_base.apps =
    geo_knowledge_hub = geo_knowledge_hub:GeoKnowledgeHub
invenio_i18n.translations =
    messages = geo_knowledge_hub
invenio_config.module =
    geo_knowledge_hub = geo_knowledge_hub.config
invenio_assets.webpack =
    geo_knowledge_hub_wp = geo_knowledge_hub.theme.webpack:theme

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203, W503, E501, W391

[compile_catalog]
directory = geo_knowledge_hub/translations/

[extract_messages]
copyright_holder = GEO Secretariat
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_knowledge_hub/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_knowledge_hub/translations/messages.pot
output-dir = geo_knowledge_hub/translations/

[update_catalog]
input-file = geo_knowledge_hub/translations/messages.pot
output-dir = geo_knowledge_hub/translations/

[isort]
profile = black
