# -*- coding: utf-8 -*-
#
# This file is part of GEO Knowledge Hub.
# Copyright 2020-2021 GEO Secretariat.
#
# GEO Knowledge Hub is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.
#

[metadata]
name = geo-knowledge-hub
version = attr: geo_knowledge_hub.__version__
description = GEO Knowledge Hub Digital Library
long_description = file: README.rst, CHANGES.rst
keywords = Geospatial Digital Library Earth Observations Invenio RDM
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-knowledge-hub
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    pydash>=5.1.0
    invenio-app-rdm>=11.0.0,<12.0.0
    geo-comments @ git+https://github.com/geo-knowledge-hub/geo-comments@b-0.6
    invenio-geographic-identifiers @ git+https://github.com/geo-knowledge-hub/invenio-geographic-identifiers@b-0.4

[options.extras_require]
tests =
    black<=23.12.1
    pytest-black>=0.3.0
    invenio-app>=1.3.4,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.14,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    pytest-lazy-fixture>=0.6.3
    sphinx>=4.5.0
    tripoli~=2.0.0
    docker-services-cli<=0.7.1
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    geo_knowledge_hub = geo_knowledge_hub:GeoKnowledgeHub
invenio_i18n.translations =
    messages = geo_knowledge_hub
invenio_config.module =
    geo_knowledge_hub = geo_knowledge_hub.config
invenio_assets.webpack =
    geo_knowledge_hub_wp = geo_knowledge_hub.theme.webpack:theme
invenio_base.blueprints =
    geo_knowledge_hub_modules_bp = geo_knowledge_hub.startup:blueprint
    geo_knowledge_hub_pids_bp = geo_knowledge_hub.modules.pid:create_blueprint
invenio_base.api_blueprints =
    geo_knowledge_hub_modules_bp = geo_knowledge_hub.startup:blueprint
invenio_oauth2server.scopes =
    tokens_generate = geo_knowledge_hub.scopes:tokens_generate_scope
invenio_previewer.previewers =
    simple_video = geo_knowledge_hub.modules.previews_ui.video
    simple_iiif_walled = geo_knowledge_hub.modules.previews_ui.iiif

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[compile_catalog]
directory = geo_knowledge_hub/translations/

[extract_messages]
copyright_holder = GEO Secretariat
msgid_bugs_address = geokhub@geosec.org
mapping-file = babel.ini
output-file = geo_knowledge_hub/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = geo_knowledge_hub/translations/messages.pot
output-dir = geo_knowledge_hub/translations/

[update_catalog]
input-file = geo_knowledge_hub/translations/messages.pot
output-dir = geo_knowledge_hub/translations/

[isort]
profile = black

[check-manifest]
ignore =
    Vagrantfile
    bootstrap*.sh
    *-requirements.txt
    certs

[tool:pytest]
addopts = --black --isort --pydocstyle --cov=geo_knowledge_hub --cov-report=term-missing
testpaths = tests geo_knowledge_hub
